[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infracheckmcp"
version = "1.0.0"
description = "Infrastructure health check MCP server for JungleeRummy QA environments"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.27.0",
    "requests>=2.31.0",
    "websockets>=12.0",
    "pymongo>=4.6.0",
    "pymssql>=2.2.0",
]

[project.scripts]
infracheckmcp = "infracheckmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/infracheckmcp"]
